--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     />
     <title>Test React App</title>
   </head>
-  <body class="bg-gray-800">
+  <body class="bg-dark-800">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
